kg8s/seed/seed008-secret/layer0/istio-gateway-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: mygateway
  namespace: default
spec:
  selector:
    istio: ingressgateway # use istio default ingress gateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        minProtocolVersion: TLSV1_2
        credentialName: 127.0.0.1.sslip.io
      hosts:
        - keycloak.127.0.0.1.sslip.io
        - kiali-istio-system.127.0.0.1.sslip.io
        - grafana-istio-system.127.0.0.1.sslip.io
        - prometheus-istio-system.127.0.0.1.sslip.io
        - tracing-istio-system.127.0.0.1.sslip.io
        - gitea.127.0.0.1.sslip.io
        - argocd.127.0.0.1.sslip.io
        - vault-dev.127.0.0.1.sslip.io
        - my-nginx.127.0.0.1.sslip.io
        - my-nginx2.127.0.0.1.sslip.io
        - go-httpbin.127.0.0.1.sslip.io
        - httpbin.127.0.0.1.sslip.io
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: my-nginx
  namespace: default
  labels:
    app: my-nginx
spec:
  hosts:
    - "my-nginx.127.0.0.1.sslip.io"
  gateways:
    - mygateway
  http:
    - route:
        - destination:
            port:
              number: 80
            host: my-nginx.default.svc.cluster.local
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: my-nginx2
  namespace: default
  labels:
    app: my-nginx2
spec:
  hosts:
    - "my-nginx2.127.0.0.1.sslip.io"
  gateways:
    - mygateway
  http:
    - route:
        - destination:
            port:
              number: 80
            host: my-nginx2.default.svc.cluster.local
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: go-httpbin
  namespace: default
  labels:
    app: go-httpbin
spec:
  hosts:
    - "go-httpbin.127.0.0.1.sslip.io"
  gateways:
    - mygateway
  http:
    - route:
        - destination:
            port:
              number: 80
            host: go-httpbin.default.svc.cluster.local
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: httpbin
  namespace: default
  labels:
    app: httpbin
spec:
  hosts:
    - "httpbin.127.0.0.1.sslip.io"
  gateways:
    - mygateway
  http:
    - route:
        - destination:
            port:
              number: 80
            host: httpbin.default.svc.cluster.local
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: kiali
  namespace: default
spec:
  hosts:
    - "kiali-istio-system.127.0.0.1.sslip.io"
  gateways:
    - mygateway
  http:
    - route:
        - destination:
            port:
              number: 20001
            host: kiali.istio-system.svc.cluster.local
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: grafana
  namespace: default
spec:
  hosts:
    - "grafana-istio-system.127.0.0.1.sslip.io"
  gateways:
    - mygateway
  http:
    - route:
        - destination:
            port:
              number: 3000
            host: grafana.istio-system.svc.cluster.local
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: prometheus
  namespace: default
spec:
  hosts:
    - "prometheus-istio-system.127.0.0.1.sslip.io"
  gateways:
    - mygateway
  http:
    - route:
        - destination:
            port:
              number: 9090
            host: prometheus.istio-system.svc.cluster.local
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: tracing
  namespace: default
spec:
  hosts:
    - "tracing-istio-system.127.0.0.1.sslip.io"
  gateways:
    - mygateway
  http:
    - route:
        - destination:
            port:
              number: 80
            host: tracing.istio-system.svc.cluster.local
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: gitea
  namespace: default
spec:
  hosts:
    - "gitea.127.0.0.1.sslip.io"
  gateways:
    - mygateway
  http:
    - route:
        - destination:
            port:
              number: 3000
            host: gitea-http.gitea.svc.cluster.local
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: argocd
  namespace: default
spec:
  hosts:
    - "argocd.127.0.0.1.sslip.io"
  gateways:
    - mygateway
  http:
    - route:
        - destination:
            port:
              number: 80
            host: argocd-server.argocd.svc.cluster.local
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: vault
  namespace: default
spec:
  hosts:
    - "vault-dev.127.0.0.1.sslip.io"
  gateways:
    - mygateway
  http:
    - route:
        - destination:
            port:
              number: 8200
            host: vault.vault.svc.cluster.local
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: keycloak
  namespace: default
spec:
  hosts:
    - "keycloak.127.0.0.1.sslip.io"
  gateways:
    - mygateway
  http:
    - route:
        - destination:
            port:
              number: 80
            host: keycloak-http.keycloak.svc.cluster.local
